#10 issue two points soved
FIxed the navbar alignment for 4k and HD, added resume button also, footer width now covering whole screen

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -5,7 +5,7 @@
     color: white;
     text-align: center;
     position: relative;
-    width: 99vw;
+    width: 100vw;
     bottom: 0;
   }
   
